Added user_auth email and implemented signup
